# mpos

./: .gitignore  LICENSE  README.md  components.json  index.html  package.json  pnpm-lock.yaml  skills-lock.json
.github/workflows/: build-installers.yml
docs/: mpos-core-requirements.md
scripts/: collect-artifacts.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: server.rs
src-tauri/src/app/: commands.rs  state.rs
src-tauri/src/config/: model.rs
src-tauri/src/discovery/: common.rs  linux.rs  macos.rs  mod.rs  service.rs  windows.rs
src-tauri/src/domain/: mod.rs  printer.rs  receipt.rs
src-tauri/src/logs/: service.rs
src-tauri/src/printing/: common.rs  escpos.rs  formatter.rs  mod.rs  service.rs  spooler.rs
src-tauri/src/security/: auth.rs
src-tauri/src/storage/: repository.rs
src/components/: Typography.tsx  auth.tsx  otp-input.tsx  theme-provider.tsx
src/components/app/: app-header.tsx  diagnostics-panel.tsx  pos-header.tsx  pos-nav.tsx  pos-sidebar.tsx  printer-profile-dialog.tsx  printer-shared.ts  printers-section.tsx  settings-dialog.tsx  sidebar-provider-app.tsx
src/components/ui/: button.tsx  input.tsx
src/lib/: i18n.ts  martpos-bridge-sdk.ts
src/locales/: en.ts  es.ts  fr.ts  pt.ts
src/mocks/: bootstrap.ts
src/styles/: globals.css
src/types/: bootstrap.ts
