[package]
name = "mpos-core"
version = "0.1.0"
description = "Local desktop bridge between MartPOS and receipt printers."
authors = ["Jefferson Lopez"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mpos_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["json", "ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
rand = "0.8"
rusb = "0.9"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp"] }
